--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="row">
                 <div class="col-12">
                   <div class="count-area-content percentage">
-                    <div class="count-digit">85.3</div>
+                    <div class="count-digit">86</div>
                     <div class="count-title">Mean Average Precision</div>
                   </div>
                 </div>
                 <div class="col-12">
-                  <div class="count-area-content">
-                    <div class="count-digit">90.7</div>
+                  <div class="count-area-content percentage">
+                    <div class="count-digit">91</div>
                     <div class="count-title">Precision</div>
                   </div>
                 </div>
@@ -111,13 +111,13 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-6">
               <div class="row">
                 <div class="col-12">
-                  <div class="count-area-content new-students">
-                    <div class="count-digit">76.7</div>
+                  <div class="count-area-content percentage">
+                    <div class="count-digit">77</div>
                     <div class="count-title">Recall</div>
                   </div>
                 </div> 
                 <div class="col-12">
-                  <div class="count-area-content">
+                  <div class="count-area-content new-students">
                     <div class="count-digit">9048</div>
                     <div class="count-title">Images Trained On</div>
                   </div>
