--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="row">
               <div class="col-lg-12">
                 <div class="caption">
-              <h6>Hello Students</h6>
-              <h2>Welcome to Education</h2>
-              <p>This is an edu meeting HTML CSS template provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. The video background is taken from Pexels website, a group of young people by <a rel="nofollow" href="https://www.pexels.com/@pressmaster" target="_blank">Pressmaster</a>.</p>
+              <h6>Welcome Educators, Administators, and More</h6>
+              <h2>Integrity 2.0 just dropped</h2>
+              <p>Phone usage is a huge issue in the modern classroom. No longer. With IntelliWatch, you know that your students are always engaged with your teaching, and practicing academic honesty.</p>
               <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="#contact">Join Us Now!</a></div>
+                  <div class="scroll-to-section"><a href="https://demo.roboflow.com/mobile-phone-detection-in-school-enviroments/4?publishable_key=rf_A6mo3q77HZP47Qtx9dTkzLUmnVA3">Preview IntelliWatch Now!</a></div>
               </div>
           </div>
               </div>
