updates to applications

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Exam Monitoring</h4>
-                <p>IntelliWatch can be used during exams to detect and prevent cheating by monitoring students' behaviors and identifying suspicious activities.</p>
+                <p>IntelliWatch can be used during exams to detect and prevent cheating by monitoring students' behaviors and identifying suspicious activities, ensuring a fair and secure testing enviroment.</p>
               </div>
             </div>
             
@@ -136,7 +136,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Classroom Management</h4>
-                <p>IntelliWatch can assist educators in monitoring student activities, identifying distractions, and promoting focused learning environments.</p>
+                <p>IntelliWatch can assist educators in monitoring student activities, identifying distractions, and promoting focused learning environments. This improves every other aspect of learning, from testing to cooperation.</p>
               </div>
             </div>
             
@@ -173,7 +173,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-6">
               <div class="row">
                 <div class="col-12">
-                  <div class="count-area-content percentage">
+                  <div class="count-area-content percentage new-students">
                     <div class="count-digit">77</div>
                     <div class="count-title">Recall</div>
                   </div>
