--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-569-edu-meeting
               <h2>Integrity 2.0 just dropped</h2>
               <p>Phone usage is a huge issue in the modern classroom.<strong> No longer.</strong> With IntelliWatch, you know that your students are always engaged with your teaching, and practicing academic honesty.</p>
               <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="https://demo.roboflow.com/mobile-phone-detection-in-school-enviroments/4?publishable_key=rf_A6mo3q77HZP47Qtx9dTkzLUmnVA3" target="_blank">Preview IntelliWatch Now!</a></div>
+                  <div class="scroll-to-section"><a href="https://demo.roboflow.com/mobile-phone-detection-in-school-enviroments/4?publishable_key=rf_A6mo3q77HZP47Qtx9dTkzLUmnVA3" target="link">Preview IntelliWatch Now!</a></div>
               </div>
           </div>
               </div>
