--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-569-edu-meeting
               <h2>Integrity 2.0 just dropped</h2>
               <p>Phone usage is a huge issue in the modern classroom.<strong> No longer.</strong> With IntelliWatch, you know that your students are always engaged with your teaching, and practicing academic honesty.</p>
               <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="https://demo.roboflow.com/mobile-phone-detection-in-school-enviroments/4?publishable_key=rf_A6mo3q77HZP47Qtx9dTkzLUmnVA3" target="link">Preview IntelliWatch Now!</a></div>
+                  <div class="scroll-to-section"><a href="https://demo.roboflow.com/mobile-phone-detection-in-school-enviroments/4?publishable_key=rf_A6mo3q77HZP47Qtx9dTkzLUmnVA3">Preview IntelliWatch Now!</a></div>
               </div>
           </div>
               </div>
@@ -207,7 +207,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>VIEW OUR TAGGED IMAGE DATASET</h3>
                 <p>Here is a link to our dataset that contains the tagged images for training our SafetyNet: School Hazard Detection With Computer Vision model. The dataset includes annotated images with bounding boxes around phones and other prohibited devices, enabling accurate object detection. Access the dataset here.</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="https://universe.roboflow.com/university-of-north-texas-towap/mobile-phone-detection-in-school-enviroments/dataset/4" target="_blank">View Tagged Dataset</a></div>
+                  <div class="scroll-to-section"><a href="https://universe.roboflow.com/university-of-north-texas-towap/mobile-phone-detection-in-school-enviroments/dataset/4" >View Tagged Dataset</a></div>
               </div>
               </div>
             </div>
@@ -216,7 +216,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>SEE THE GITHUB REPOSITORY</h3>
                 <p>You can find the code and resources used for our SafetyNet: School Hazard Detection With Computer Vision project in our GitHub repository. The repository contains the necessary files for training the model, implementing the system, and further development. Explore the repository here.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a href="https://github.com/eamorebel/JPS2023/tree/main" target="_blank" rel="noopener noreferrer">Join Us Now!</a></div>
+                  <div class="scroll-to-section"><a href="https://github.com/eamorebel/JPS2023/tree/main">View GitHub Repository</a></div>
               </div>
               </div>
             </div>
