Revert "remove video"
This reverts commit 4ea56e914d9d0f4498d373ee7eeeb32a8269f021.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ https://templatemo.com/tm-569-edu-meeting
 
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
+      <video autoplay muted loop id="bg-video">
+          <source src="assets/images/course-video.mp4" type="video/mp4" />
+      </video>
+
       <div class="video-overlay header-text">
           <div class="container">
             <div class="row">
@@ -175,7 +179,7 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                 </div> 
                 <div class="col-12">
-                  <div class="count-area-content">
+                  <div class="count-area-content new-students">
                     <div class="count-digit">9048</div>
                     <div class="count-title">Images Trained On</div>
                   </div>
