--- a/index.html
+++ b/index.html
@@ -331,11 +331,11 @@ https://templatemo.com/tm-569-edu-meeting
               <form id="contact" action="" method="post">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Let's get in touch</h2>
+                    <h2>Request a Consultation</h2>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="name" type="text" id="name" placeholder="YOURNAME...*" required="">
+                      <input name="name" type="text" id="name" placeholder="YOUR NAME...*" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
@@ -372,15 +372,15 @@ https://templatemo.com/tm-569-edu-meeting
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>info@meeting.edu</span>
+                <span>EthanRebello@IntelliSense.com</span>
               </li>
               <li>
                 <h6>Street Address</h6>
-                <span>Rio de Janeiro - RJ, 22795-008, Brazil</span>
+                <span>1600 Pennsylvania Avenue NW, Washington, DC 20500</span>
               </li>
               <li>
                 <h6>Website URL</h6>
-                <span>www.meeting.edu</span>
+                <span>eamorebel.github.io/JPS2023/</span>
               </li>
             </ul>
           </div>
