--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@ https://templatemo.com/tm-569-edu-meeting
     </div>
   </section>
 
+  <section class="upcoming-meetings">
+  </section>
+
   <section class="our-facts" id = "stats">
     <div class="container">
       <div class="row">
