--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Exam Monitoring</h4>
-                <p>IntelliWatch can be used during exams to detect and prevent cheating by monitoring students' behaviors and identifying suspicious activities, ensuring a fair and secure testing enviroment.</p>
+                <p>IntelliWatch can be used during exams to detect and prevent cheating by monitoring students' behaviors and identifying suspicious activities, ensuring a fair and secure testing enviroment. No cellular activity means less cheating.</p>
               </div>
             </div>
             
