--- a/index.html
+++ b/index.html
@@ -370,20 +370,20 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="right-info">
             <ul>
               <li>
-                <h6>Phone Number</h6>
-                <span>010-020-0340</span>
+                <h6>Model</h6>
+                <span>YOLO v8</span>
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>EthanRebello@IntelliSense.com</span>
+                <span>ERebello@IntelliSense.com</span>
               </li>
               <li>
                 <h6>Street Address</h6>
                 <span>1600 Pennsylvania Avenue NW, Washington, DC 20500</span>
               </li>
               <li>
-                <h6>Website URL</h6>
-                <span>eamorebel.github.io/JPS2023/</span>
+                <h6>Repository</h6>
+                <span>JPS2023</span>
               </li>
             </ul>
           </div>
