--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@ https://templatemo.com/tm-569-edu-meeting
   </section>
 
   <section class="upcoming-meetings">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="caption">
+        <h2>IntelliWatch</h2>
+        <h4>INTEGRITY | ACCOUNTABILITY | ENGAGEMENT </h4>
+        <h6>IntelliWatch is a computer vision model that detects mobile phone usage in school enviroments. It is trained on a custom dataset of 9,000 images, and is 86% accurate. </h6>
+      </div>
   </section>
 
   <section class="our-facts" id = "stats">
