remove old name

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-12">
               <div class="item">
                 <h3>VIEW OUR TAGGED IMAGE DATASET</h3>
-                <p>Here is a link to our dataset that contains the tagged images for training our SafetyNet: School Hazard Detection With Computer Vision model. The dataset includes annotated images with bounding boxes around phones and other prohibited devices, enabling accurate object detection. Access the dataset here.</p>
+                <p>Here is a link to our dataset that contains the tagged images for training our IntelliWatch: Safeguarding Learning with Computer Vision model. The dataset includes annotated images with bounding boxes around phones and other prohibited devices, enabling accurate object detection. Access the dataset here.</p>
                 <div class="main-button-red">
                   <div class="scroll-to-section"><a href="https://universe.roboflow.com/university-of-north-texas-towap/mobile-phone-detection-in-school-enviroments/dataset/4" >View Tagged Dataset</a></div>
               </div>
@@ -225,7 +225,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-12">
               <div class="item">
                 <h3>SEE THE GITHUB REPOSITORY</h3>
-                <p>You can find the code and resources used for our SafetyNet: School Hazard Detection With Computer Vision project in our GitHub repository. The repository contains the necessary files for training the model, implementing the system, and further development. Explore the repository here.</p>
+                <p>You can find the code and resources used for our IntelliWatch: Safeguarding Learning with Computer Vision project in our GitHub repository. The repository contains the necessary files for training the model, implementing the system, and further development. Explore the repository here.</p>
                 <div class="main-button-yellow">
                   <div class="scroll-to-section"><a href="https://github.com/eamorebel/JPS2023/tree/main">View GitHub Repository</a></div>
               </div>
@@ -323,7 +323,7 @@ https://templatemo.com/tm-569-edu-meeting
                 </div>
                 <div class="accordion-body">
                     <div class="content">
-                        <p>Looking ahead, we envision expanding the capabilities of IntelliWatch by incorporating edge computing with cameras. By processing the video feeds locally on edge devices, we can reduce latency and increase the system's responsiveness. Additionally, we plan to further refine the model's performance by continuously training it on larger and more diverse datasets. Our goal is to make SafetyNet a robust and widely applicable tool for classroom hazard detection, contributing to a safer and more productive learning environment for students and educators alike.
+                        <p>Looking ahead, we envision expanding the capabilities of IntelliWatch by incorporating edge computing with cameras. By processing the video feeds locally on edge devices, we can reduce latency and increase the system's responsiveness. Additionally, we plan to further refine the model's performance by continuously training it on larger and more diverse datasets. Our goal is to make IntelliWatch a robust and widely applicable tool for classroom hazard detection, contributing to a safer and more productive learning environment for students and educators alike.
                         </p>
                     <br></div>
                 </div>
