Fix naming conventions + title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Education Meeting HTML5 Template</title>
+    <title>IntelliWatch</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -384,7 +384,7 @@ https://templatemo.com/tm-569-edu-meeting
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>ERebello@IntelliSense.com</span>
+                <span>ERebello@IntelliWatch.com</span>
               </li>
               <li>
                 <h6>Street Address</h6>
@@ -400,7 +400,7 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2023 IntelliSense, Inc.</p>
+      <p>Copyright © 2023 IntelliWatch, Inc.</p>
     </div>
   </section>
 
