--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@ https://templatemo.com/tm-569-edu-meeting
   <!-- ***** Main Banner Area End ***** -->
 
   <section class="services" >
-  </section>
-
-  <section class="upcoming-meetings">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -155,6 +152,10 @@ https://templatemo.com/tm-569-edu-meeting
         <h4>INTEGRITY | ACCOUNTABILITY | ENGAGEMENT </h4>
         <h6>IntelliWatch is a computer vision model that detects mobile phone usage in school enviroments. It is trained on a custom dataset of 9,000 images, and is 86% accurate. </h6>
       </div>
+    </div>
+  </section>
+
+  <section class="upcoming-meetings">
   </section>
 
   <section class="our-facts" id = "stats">
