--- a/index.html
+++ b/index.html
@@ -148,10 +148,13 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-12">
           <div class="caption">
-            <h2>IntelliWatch</h2>
-            <h4>INTEGRITY | ACCOUNTABILITY | ENGAGEMENT </h4>
-            <h6>IntelliWatch is a computer vision model that detects mobile phone usage in school enviroments. It is trained on a custom dataset of 9,000 images, and is 86% accurate. </h6>
+            <div class="caption">
+              <h2>IntelliWatch</h2>
+              <h4>INTEGRITY | ACCOUNTABILITY | ENGAGEMENT </h4>
+              <h6>IntelliWatch is a computer vision model that detects mobile phone usage in school enviroments. It is trained on a custom dataset of 9,000 images, and is 86% accurate. </h6>
+            </div>
           </div>
+        </div>
       </div>
     </div>
   </section>
