remove name from email

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ https://templatemo.com/tm-569-edu-meeting
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>ERebello@IntelliWatch.com</span>
+                <span>support@intelliwatch.com</span>
               </li>
               <li>
                 <h6>Street Address</h6>
