video background fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#stats">Statistics</a></li>
-                          <li class="scroll-to-section"><a href="#apply">Apply Now</a></li>
+                          <li class="scroll-to-section"><a href="#apply">Project Info</a></li>
                           <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
