--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12">
-              <h2>Model Statistics</h2>
+              <h2>Model Statistics & Promo Video</h2>
             </div>
             <div class="col-lg-6">
               <div class="row">
