--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>VIEW OUR TAGGED IMAGE DATASET</h3>
                 <p>Here is a link to our dataset that contains the tagged images for training our IntelliWatch: Safeguarding Learning with Computer Vision model. The dataset includes annotated images with bounding boxes around phones and other prohibited devices, enabling accurate object detection. Access the dataset here.</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="https://universe.roboflow.com/university-of-north-texas-towap/mobile-phone-detection-in-school-enviroments/dataset/4" onclick="window.open('https://universe.roboflow.com/university-of-north-texas-towap/mobile-phone-detection-in-school-enviroments/dataset/4)" target="_blank">View Tagged Dataset</a></div>
+                  <div class="scroll-to-section"><a href="https://universe.roboflow.com/university-of-north-texas-towap/mobile-phone-detection-in-school-enviroments/dataset/4" onclick="window.open('https://universe.roboflow.com/university-of-north-texas-towap/mobile-phone-detection-in-school-enviroments/dataset/4')" target="_blank">View Tagged Dataset</a></div>
               </div>
               </div>
             </div>
