--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ https://templatemo.com/tm-569-edu-meeting
         </div> 
         <div class="col-lg-6 align-self-center">
           <div class="video">
-            <a href="https://youtube.com/shorts/NgGX7Fa_VBY?feature=share" target="_blank"><img src="assets/images/play-icon.png" alt=""></a>
+            <a href="https://youtu.be/KJbSjSJBXg8" target="_blank"><img src="assets/images/play-icon.png" alt=""></a>
           </div>
         </div>
       </div>
