Fix naming discrepancies

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>SEE THE GITHUB REPOSITORY</h3>
                 <p>You can find the code and resources used for our IntelliWatch: Safeguarding Learning with Computer Vision project in our GitHub repository. The repository contains the necessary files for training the model, implementing the system, and further development. Explore the repository here.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a href="https://github.com/eamorebel/JPS2023/tree/main" target="_blank" onclick="window.open('https://github.com/eamorebel/JPS2023/tree/main')">View GitHub Repository</a></div>
+                  <div class="scroll-to-section"><a href="https://github.com/eamorebel/HACKPNW2023" target="_blank" onclick="window.open('https://github.com/eamorebel/HACKPNW2023')">View GitHub Repository</a></div>
               </div>
               </div>
             </div>
@@ -397,7 +397,7 @@ https://templatemo.com/tm-569-edu-meeting
               </li>
               <li>
                 <h6>Repository</h6>
-                <span>JPS2023</span>
+                <span>HACKPNW2023</span>
               </li>
             </ul>
           </div>
